<resources>
    <string name="app_name">Курсовая работа</string>
    <string name="app_calc">Калькулятор</string>
    <string name="app_draw">2D графика</string>
    <string name="app_game">2D демо</string>
    <string name="app_game_settings">2D демо с настройками</string>
    <string name="back">back</string>
    <string name="clear">c</string>
    <string name="mod">mod</string>
    <string name="pow">pow</string>
    <string name="option">Вариант №2</string>
    <string name="ask_text">Выберите задание</string>
    <string name="task_1">Задание №1</string>
    <string name="task_2">Задание №2</string>
    <string name="task_3">Задание №3</string>
    <string name="task_4">Задание №4</string>
    <string name="gray_background">gray_background</string>
    <string name="title_activity_settings">Settings</string>
    <string name="colorview">colorView</string>
    <string name="backgroundColor">Цвет фона</string>
    <string name="octahedronColor">Цвет октаэдра</string>
    <string name="velocityOctahedron">Ускорение октаэдра</string>
    <string name="settings">Настройки</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
